# building

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/building/: __init__.py
src/viral_content_researcher/: __init__.py  brief_generator.py  cli.py  curator.py  models.py  researcher.py  storage.py
src/viral_content_researcher/scrapers/: __init__.py  base.py  google_trends.py  hacker_news.py  product_hunt.py  reddit.py  rss_feeds.py
